[package]
name = "slop100-inscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.31"
bitcoincore-rpc = "0.18"
ord = { git = "https://github.com/ordinals/ord.git", branch = "master" }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
cron = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.sha2]
version = "0.10"

[dependencies.hex]
version = "0.4"
